# SystemInsight

./: .clang-format  .gitignore  CMakeLists.txt  README.md  architecture.md
configs/: client_example.json  grafana_system_insight_dashboard.json  prometheus_example.yml  server_example.json
docker/: Dockerfile
scripts/: grafana_docker_run.sh  grafana_docker_stop.sh  prometheus_docker_run.sh  prometheus_docker_stop.sh  system_insight_docker_build.sh  system_insight_docker_into.sh  system_insight_docker_run.sh  system_insight_docker_stop.sh  system_insight_offline_prepare.sh
src/client/: CMakeLists.txt  client_app.cc  client_app.h  main.cc  metrics_client.cc  metrics_client.h  system_metrics_collector.cc  system_metrics_collector.h
src/client/metrics/: cpu_mmap_collector.cc  cpu_mmap_collector.h  mmap_reader.cc  mmap_reader.h
src/common/: CMakeLists.txt
src/common/config/: config_loader.cc  config_loader.h
src/common/logging/: logging.cc  logging.h
src/exporter/: CMakeLists.txt  prometheus_exporter.cc  prometheus_exporter.h
src/kmod/: .gitignore  cpu_stat_collector.c  softirq_collector.c
src/proto/: CMakeLists.txt  system_insight.proto
src/server/: CMakeLists.txt  main.cc  metrics_repository.cc  metrics_repository.h  metrics_service_impl.cc  metrics_service_impl.h  server_app.cc  server_app.h
tests/: CMakeLists.txt  config_loader_test.cc
